--- a/packages/binding-mock/package.json
+++ b/packages/binding-mock/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@serialport/binding-mock",
+  "name": "@palettegear/serialport-binding-mock",
   "version": "2.0.4",
   "main": "binding-mock.js",
   "keywords": [
     "serialport-binding"
   ],
   "dependencies": {
-    "@serialport/binding-abstract": "^2.0.4",
+    "@palettegear/serialport-binding-abstract": "^2.0.4",
     "debug": "^4.1.0"
   },
   "engines": {
