--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "@serialport/bindings",
+  "name": "@palettegear/serialport-bindings",
   "version": "2.0.7",
   "main": "lib",
   "keywords": [
     "serialport-binding"
   ],
   "dependencies": {
-    "@serialport/binding-abstract": "^2.0.4",
-    "@serialport/parser-readline": "^2.0.2",
+    "@palettegear/serialport-binding-abstract": "^2.0.4",
+    "@palettegear/serialport-parser-readline": "^2.0.2",
     "bindings": "^1.3.0",
     "debug": "^4.1.0",
     "nan": "^2.12.1",
     "prebuild-install": "^5.2.1"
   },
   "devDependencies": {
-    "@serialport/binding-mock": "^2.0.4"
+    "@palettegear/serialport-binding-mock": "^2.0.4"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "scripts": {
-    "install": "prebuild-install --tag-prefix @serialport/bindings@ || node-gyp rebuild",
+    "install": "prebuild-install --tag-prefix @palettegear/serialport-bindings@ || node-gyp rebuild",
     "lint": "cc --verbose",
-    "prebuild": "prebuild --all --force --strip --verbose --tag-prefix @serialport/bindings@",
+    "prebuild": "prebuild --all --force --strip --verbose --tag-prefix @palettegear/serialport-bindings@",
     "rebuild": "node-gyp rebuild"
   },
   "publishConfig": {
