--- a/packages/parser-ready/package.json
+++ b/packages/parser-ready/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@serialport/parser-ready",
+  "name": "@palettegear/serialport-parser-ready",
   "main": "ready.js",
   "version": "2.0.2",
   "engines": {
