--- a/packages/parser-regex/package.json
+++ b/packages/parser-regex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@serialport/parser-regex",
+  "name": "@palettegear/serialport-parser-regex",
   "main": "regex.js",
   "version": "2.0.2",
   "engines": {
